Update recorder to support Java9. Add comment to encourage change.